RESOLVED FIXED188680
REGRESSION(r234930): Don't embed a #if in an ASSERT
https://bugs.webkit.org/show_bug.cgi?id=188680
Summary REGRESSION(r234930): Don't embed a #if in an ASSERT
Ross Kirsling
Reported 2018-08-16 15:28:58 PDT
r234930 embeds a #if in an ASSERT, which is an error for MSVC: > Source\WebCore\page/EventHandler.cpp(3707): error C2121: '#': invalid character: possibly the result of a macro expansion > Source\WebCore\page/EventHandler.cpp(3699): error C2059: syntax error: 'if' > Source\WebCore\page/EventHandler.cpp(3707): error C2143: syntax error: missing ';' before '{' It is also a warning for Clang (-Wembedded-directive): > warning: embedding a directive within macro arguments has undefined behavior
Attachments
Patch (2.07 KB, patch)
2018-08-16 15:32 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2018-08-16 15:32:10 PDT
WebKit Commit Bot
Comment 2 2018-08-16 16:30:50 PDT
Comment on attachment 347314 [details] Patch Clearing flags on attachment: 347314 Committed r234969: <https://trac.webkit.org/changeset/234969>
WebKit Commit Bot
Comment 3 2018-08-16 16:30:51 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 4 2018-08-16 16:31:29 PDT
Thank you for fixing this, Ross!
Radar WebKit Bug Importer
Comment 5 2018-08-16 16:32:20 PDT
Radar WebKit Bug Importer
Comment 6 2018-08-16 16:32:24 PDT
Note You need to log in before you can comment on or make changes to this bug.