REGRESSION(r234930): Don't embed a #if in an ASSERT https://bugs.webkit.org/show_bug.cgi?id=188680

Reviewed by Tim Horton.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleDrag):
Simplify the ASSERT -- it seems we just want to know that DragSourceActionSelection and exactly one other DragSourceAction is set.


Canonical link: https://commits.webkit.org/203748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234969 268f45cc-cd09-0410-ab3c-d52691b4dbfc